--- a/_config.yml
+++ b/_config.yml
@@ -196,6 +196,7 @@ exclude:
   - node_modules
   - package.json
   - package-lock.json
+  - .idea
 
 jekyll-archives:
   enabled: [categories, tags]
