Enable `jekyll-relative-links` plugin

--- a/_config.yml
+++ b/_config.yml
@@ -210,3 +210,8 @@ jekyll-archives:
 
 plugins:
   - jekyll-redirect-from
+  - jekyll-relative-links
+
+relative_links:
+  enabled:     true
+  collections: true
