Update tagline and description

--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,11 @@ theme: jekyll-theme-chirpy
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Erik's Ponderings                          # the main title
-
-tagline: Blog and other hobbies   # it will display as the sub-title
+title: Erik's Ponderings
+tagline: A blog and more
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Erik's blog, essays, and other content.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
