Try to fix GitHub build

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Test Site
         run: |
-          bash tools/test.sh
+          bundle exec htmlproofer _site --disable-external --check-html --allow_hash_href
 
       - name: Deploy
         run: |
