Try to use new Disqus property

--- a/_config.yml
+++ b/_config.yml
@@ -55,9 +55,13 @@ google_analytics:
     proxy_endpoint: ''
     cache: false  # pv data local cache, good for the users from GFW area.
 
+comments:
+    disqus:
+        shortname: ebruchez
+
 disqus:
   comments: true  # boolean type, the global switch for posts comments.
-  shortname: 'ebruchez'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+#  shortname: 'ebruchez'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
 # Prefer color scheme setting.
